@@ -1,6 +1,7 @@
 19Nov07=======================================================================
 1. change MRTG graphs to be based on GMT, not localtime. This allows one to
 more easily compare debug data with traffic graphs.
+2. Add a create/user command to just add a plain user.
 17Nov07=======================================================================
 1. Add Local::ann() as requested by Felipe PY1NB.
 16Nov07=======================================================================
